argocd/argocd-ingress.yml
# aws nlb -> ingress controller(이것도 하나의 Pod) -> ingress -> service -> pod

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    # kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  ingressClassName: nginx

  # certificate 이용한 https:// 통신하고 싶다면?
  # tls:
  #   - hosts:
  #       - argo.kwang.cloud
  #     secretName: argo-kwang-com-tls

  rules:
    # 레코드로 등록한 도메인 이름
    - host: argo.kwang.cloud
      http:
        paths:
          # http://server.kwang.cloud/
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
          # 이런 예시가 될 수 있음
          # - path: /user-service
          # - path: /product-service
          # - path: /order-service
